# panelview

./: CLAUDE.md  Makefile  README.md  pyproject.toml
examples/: demo_live.py
src/panelview/: __init__.py  __main__.py  app.py  panel.py  signals.py  writer.py
