[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "panelview"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["textual>=0.50"]

[project.scripts]
panelview = "panelview.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/panelview"]
